<resources>
    <string name="app_name">reversIsec</string>
    <string name="menu_perfil">Profile</string>
    <string name="menu_ajuda">Help</string>
    <string name="menu_sobre">About</string>
    <string name="menu_linguagem">Language</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_historico">HistoricoActivity</string>
    <string name="mainTitle">ReversISEC</string>
    <string name="singlePlayer">Single Player</string>
    <string name="multiPLayer">Multiplayer</string>
    <string name="multiPlayerOnline">Multiplayer Online</string>
    <string name="historic">historic</string>
    <string name="escolher_lingua_pt">Portuguese</string>
    <string name="escolher_lingua_en">English</string>
    <string name="escolher_lingua">Choose language</string>
    <string name="cancelar">Cancel</string>
    <string name="um_jogador">One Player</string>
    <string name="dois_jogadores">Two Player</string>
    <string name="nome_jogador">Player Name:</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="historico">Historic</string>
    <string name="tempo_jogado">Time Played:</string>
    <string name="tempo_restante">Time Left:</string>

    <string name="ganhou_brancas">Won the white</string>
    <string name="ganhou_pretas">Won the black</string>
    <string name="jogador">Player:</string>
    <string name="tempo">Time:</string>
    <string name="sair">Exit</string>
    <string name="terminou_tempo_brancas">End of time for the white pieces</string>
    <string name="terminou_tempo_pretas">End of time for the black pieces</string>
    <string name="computador">Computer</string>
    <string name="concluir_jogada">Complete the last move</string>
    <string name="abandonar_partida">Can not leave the game!</string>
    <string name="jogador1_activo">Player 1 active</string>
    <string name="jogador2_activo">Player 2 active</string>
    <string name="abandonar_partida_vez">You can only leave the game in turn!</string>
    <string name="tempo_jogo">Playing time</string>
    <string name="minutos">(in minutes)</string>
    <string name="com_temporizador">With Timer</string>
    <string name="sem_temporizador">Without Timer</string>
    <string name="capturar_imagem">Capture Image</string>
    <string name="guardar_perfil">Save Profile</string>
    <string name="escolher_perfil">Choose Profile</string>
    <string name="sobre1">Pratical Work Android 2017/2018 - Chess Game</string>
    <string name="sobre2">Application within the scope of curricular unit:</string>
    <string name="sobre3">Mobile Architectures</string>
    <string name="sobre4">Performed by:</string>
    <string name="tempo_extra">Extra Time</string>
    <string name="segundos">(in seconds)</string>
    <string name="tempo_extra_invalido">The extra time should be between 0 and 60 seconds!</string>
    <string name="temporizador_invalido">The timer should be between 1 and 99 minutes!</string>
    <string name="menu_eliminar">Delete</string>
    <string name="de">From</string>
    <string name="para">To</string>
    <string name="servidor">Create Game</string>
    <string name="cliente">Join Game</string>
    <string name="server_espera">Waiting for a player</string>
    <string name="server_titulo">RPS Server</string>
    <string name="error_netconect">Error connection</string>

    <string name="pc">Computer</string>
    <string name="jogador1">Player 1</string>
    <string name="jogador2">Player 2</string>
    <string name="insertname">Inset Name:</string>
    <string name="imagetut">Press the img to take a picture</string>
    <string name="createprofile">Create Profile</string>
    <string name="playAgain">Play again</string>
    <string name="passTurn">Pass turn</string>
    <string name="backbtmainmenu">Main Menu</string>
    <string name="setupsinglelb">Choose a Color</string>
    <string name="setupblackpiece">Black</string>
    <string name="setupwhitepiece">White</string>
    <string name="setupbtstartgame">Start Game</string>
    <string name="setupplayer1">Player 1 Color</string>
    <string name="setupplayer2">Player 2 Color</string>
    <string name="setuplbname2">Insert Player 2 Name</string>
</resources>
