<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@drawable/cor_fundo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/sobre1"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:text="@string/sobre2"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:text="@string/sobre3"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:text="@string/sobre4"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="a21230556 - Gonçalo Gomes"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="a21250072 - João Miguel Gaspar"
        android:textStyle="bold|italic"/>
</LinearLayout>
