<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/tvNomeJogador"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_jogador"
        android:textColor="#000000"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/edNomeJogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:maxLength="25"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnCarregarImagem"
            android:layout_margin="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capturar_imagem"
            android:textColor="#000000"
            android:onClick="onCapturarImagem"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_margin="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_perfil"
            android:textColor="#000000"
            android:onClick="onGuardarPerfil"/>

        <Button
            android:id="@+id/btnEscolherPerfil"
            android:layout_margin="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escolher_perfil"
            android:textColor="#000000"
            android:onClick="onEscolherPerfil"
            tools:ignore="OnClick" />


    </LinearLayout>
</LinearLayout>
