<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cor_fundo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                     android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/setupplayer1"
                    android:textAlignment="center"
                     android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setupplayer2"
                android:textAlignment="center"
                 android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"   >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"  android:gravity="center" >


                <RadioButton
                    android:id="@+id/radioButton_p1_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:checked="true"
                    android:text="@string/setupblackpiece"
                    android:textAlignment="center"
                     android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton_p1_white"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/setupwhitepiece"
                    android:textAlignment="center"
                     android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton_p2_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/setupblackpiece"
                    android:textAlignment="center"
                     android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton_p2_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:checked="true"
                    android:text="@string/setupwhitepiece"
                    android:textAlignment="center"
                     android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lb_p2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/setuplbname2"
        android:textAlignment="center"
         android:textStyle="bold" />

    <EditText
        android:id="@+id/edT_player2_name"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName" />
    <Button
        android:onClick="onCapturarImg"
         android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/capturar_imagem"
        android:textAlignment="center"
        android:textColor="#45415E"
        android:textStyle="bold"
        android:background="@drawable/botao_menu"/>
    <Button
        android:onClick="onStart"
         android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/setupbtstartgame"
        android:textAlignment="center"
        android:textColor="#45415E"
        android:textStyle="bold"
        android:background="@drawable/botao_menu"/>
</LinearLayout>
