<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.MainActivity"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@drawable/cor_fundo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reverseisecv2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUmJogador"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onUmJogador"
            android:text="@string/singlePlayer"
            android:background="@drawable/botao_menu"
            android:layout_margin="5dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnMultiplayer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDoisJogadores"
            android:text="@string/multiPlayer"
            android:background="@drawable/botao_menu"
            android:layout_margin="5dp"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onJogarEmRede"
            android:text="@string/multiPlayerOnline"
            android:textColor="#000000"
            android:background="@drawable/botao_menu"
            android:layout_margin="5dp"
            android:id="@+id/btnJogarEmRede" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onHistorico"
            android:text="@string/historico"
            android:textColor="#000000"
            android:background="@drawable/botao_menu"
            android:layout_margin="5dp"
            android:id="@+id/btnHistorico"/>
    </LinearLayout>
</LinearLayout>